@@ -1,5 +1,5 @@
 AC_PREREQ(2.61)
-AC_INIT([biosensor], [bio_inj-el-0.4.1-b2])
+AC_INIT([biosensor], [bio_inj-el-0.4.1-b3])
 AC_CONFIG_AUX_DIR(admin)
 AC_CONFIG_SRCDIR([src/README])
 AC_CONFIG_HEADERS([ src/libbiosensor-xml/biosensor-xml.hxx src/libbiosensor/biosensor.hxx src/libbiosensor-slv-fd/biosensor-slv-fd.hxx ])
