@@ -1,4 +1,6 @@
 #include "SubstanceGradOnEdge.hxx"
+#include <bio/Logging.hxx>
+#define LOGGER "libbiosensor-slv-fd::im2d::SubstanceGradOnEdge: "
 
 
 /* ************************************************************************** */
@@ -15,6 +17,11 @@ BIO_SLV_FD_IM2D_NS::SubstanceGradOnEdge::SubstanceGradOnEdge(
     {
         coef = -coef;
     }
+    
+    LOG_DEBUG(LOGGER
+              << "Created: diffusionCoef=" << diffusionCoef
+              << " isForward=" << edgeData->isForward()
+             );
 }
 
 
